--- a/index.html
+++ b/index.html
@@ -235,6 +235,6 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-
+<script src='js/pictures.js'></script>
 </body>
 </html>
