--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                 <!-- Добавление хэш-тегов и комментария к изображению -->
                 <fieldset class="img-upload__text text">
-                  <input class="text__hashtags" name="hashtags" placeholder="#хэш-тег" required minlength='2' maxlength='20'>
+                  <input class="text__hashtags" name="hashtags" placeholder="#хэш-тег">
                   <textarea class="text__description" name="description" placeholder="Ваш комментарий..."></textarea>
                 </fieldset>
 
