--- a/index.html
+++ b/index.html
@@ -227,6 +227,12 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-<script src='js/pictures.js'></script>
+  <script src='js/upload-form.js'></script>
+  <script src='js/keyboard-utils.js'></script>
+  <script src='js/math-utils.js'></script>
+  <script src='js/form-validate.js'></script>
+  <script src='js/pictures.js'></script>
+  <script src='js/big-picture.js'></script>
+
 </body>
 </html>
